# BarkDirectX

./: CMakeLists.txt  Main.cpp  README.md  vcpkg.json
Common/include/: Utility.h
Physics/include/: Body.h  Collider.h  QuadTree.h  Shape.h  World.h
Physics/src/: Collider.cpp  Contact.cpp  QuadTree.cpp  World.cpp
SFML/include/: SFMLApp.h
SFML/src/: SFMLApp.cpp
samples/include/: BouncingCollisionSample.h  DefaultSample.h  FormsTriggerSample.h  GroundCollisionSample.h  Sample.h  SampleManager.h  StarSystemSample.h  TriggerSample.h
samples/src/: BouncingCollisionSample.cpp  FormsTriggerSample.cpp  GroundCollisionSample.cpp  Sample.cpp  SampleManager.cpp  StarSystemSample.cpp  TriggerSample.cpp
